	PR fortran/55395 	* varpool.c (varpool_remove_node): Don't drop DECL_INITIAL 	if -g and emitting DWARF2+.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194272 138bc75d-0d04-0410-961f-82ee72b054a4